--- a/events/logicloom2/index.html
+++ b/events/logicloom2/index.html
@@ -266,7 +266,7 @@ border-radius:5px;
           <div class="col-lg-4">
             <center><h3>Event Details</h3>
             <p>Please go through the documents first!</p>
-            <a href="/rules.html"><button style="border: 0;padding: 9px 25px;cursor: pointer;background: #f82249;color: #fff;transition: all 0.3s ease;outline: none;font-size: 14px;border-radius: 50px;"><i class="bi bi-chevron-double-right"></i> Rule Book</button></a>
+            <a href="rules.html"><button style="border: 0;padding: 9px 25px;cursor: pointer;background: #f82249;color: #fff;transition: all 0.3s ease;outline: none;font-size: 14px;border-radius: 50px;"><i class="bi bi-chevron-double-right"></i> Rule Book</button></a>
             <br><br> 
             <a href="#faq"><button style="border: 0;padding: 9px 25px;cursor: pointer;background: #f82249;color: #fff;transition: all 0.3s ease;outline: none;font-size: 14px;border-radius: 50px;"><i class="bi bi-chevron-double-right"></i> FAQs</button></a>  
             <br><br>
@@ -371,31 +371,38 @@ border-radius:5px;
           <!-- Schedule Day 3 -->
           <div role="tabpanel" class="col-lg-9  tab-pane fade" id="announcements">
 <h3 class="sub-heading">Announcements</h3>
+                  <div class="row schedule-item">
+    <div class="col-md-2"><time>3 Nov 2024</time></div>
+              <div class="col-md-10">
+                <h4>Release of LogicLooM 2.0 Stats <span class="rounded-span" style="color:white;">NEW</span></h4>
+                <p><a href="storage/logicloom-v2-release.pdf" target="_blank">Click here to View</a></p>
+              </div>
+            </div>
 <div class="row schedule-item">
     <div class="col-md-2"><time>3 June 2024</time></div>
               <div class="col-md-10">
-                <h4>Finale Statistics! <span class="rounded-span" style="color:white;">NEW</span></h4>
+                <h4>Finale Statistics!</h4>
                 <p><a href="storage/finalestats.pdf" target="_blank">Click here to View</a></p>
               </div>
             </div>
                   <div class="row schedule-item">
     <div class="col-md-2"><time>25 May 2024</time></div>
               <div class="col-md-10">
-                <h4>List of Participants Qualified for Finals :D <span class="rounded-span" style="color:white;">NEW</span></h4>
+                <h4>List of Participants Qualified for Finals :D</h4>
                 <p><a href="storage/prefinale-outcomes.pdf" target="_blank">Click here to View</a></p>
               </div>
             </div>
 <div class="row schedule-item">
     <div class="col-md-2"><time>20 May 2024</time></div>
               <div class="col-md-10">
-                <h4>Prefinalists List Announced! <span class="rounded-span" style="color:white;">NEW</span></h4>
+                <h4>Prefinalists List Announced!</h4>
                 <p><a href="storage/prefinalists.pdf" target="_blank">Click here to View</a></p>
               </div>
             </div>
 <div class="row schedule-item">
     <div class="col-md-2"><time>7 May 2024</time></div>
               <div class="col-md-10">
-                <h4>Addressing Suggestions from Margazhi and Changes in LogicLooM! <span class="rounded-span" style="color:white;">NEW</span></h4>
+                <h4>Addressing Suggestions from Margazhi and Changes in LogicLooM!</h4>
                 <p><a href="storage/changes-compiled.pdf" target="_blank">Click here to View</a></p>
               </div>
             </div>
