--- a/index.html
+++ b/index.html
@@ -46,43 +46,56 @@
 }   
 </style>
 <style>
+/* Global styles for page content */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    overflow: auto;  /* Ensure scrolling works */
+    height: 100%;    /* Full height for the page */
+}
+
+/* Modal styles */
 .modal {
     display: none;  /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    z-index: 1050;   /* Ensure modal stays on top of everything */
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black with opacity */
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);  /* Semi-transparent background */
 }
 
+/* Modal Content */
 .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* Center the modal */
+    background-color: #fff;
+    margin: 15% auto;  /* Center the modal vertically */
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Could be adjusted */
-    box-shadow: 0px 4px 8px rgba(0,0,0,0.1);
+    width: 80%;
+    max-width: 600px;  /* Max width for larger screens */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
     animation: fadeIn 0.3s ease;
 }
 
+/* Close button */
 .close {
     color: #aaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
+    cursor: pointer;
 }
 
 .close:hover,
 .close:focus {
     color: black;
     text-decoration: none;
-    cursor: pointer;
 }
 
+/* Modal fade-in animation */
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -90,7 +103,19 @@
     to {
         opacity: 1;
     }
-}    
+}
+
+/* Make the modal more responsive on smaller screens */
+@media (max-width: 768px) {
+    .modal-content {
+        width: 90%;  /* Increase width on smaller screens */
+        margin: 20% auto;
+    }
+
+    .close {
+        font-size: 24px;  /* Smaller close button on mobile */
+    }
+}   
 </style>
 </head>
 <body>
@@ -99,7 +124,7 @@
     <div class="modal-content">
         <span class="close">&times;</span>
         <img src="https://wayanadiitm.github.io/contribute/assets/teaser.png" style="max-width:100%;height:auto;" alt="announcement"/>
-        <p>Surprise awaits as Wayanad's most intelligent buddy, IRIS returns to take you to a wonderful algorithmic voyage this winter... Stay Tuned!!</p>
+        <h3>Surprise awaits as Wayanad's most intelligent buddy, IRIS returns to take you to a wonderful algorithmic voyage this winter... Stay Tuned!!</h3>
     </div>
 </div>
 
