--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ body {
                 among students with more than 1000+ unique participants combined and Profs. from IITGN, IITR and IITM course instructors being a part of it.
               </p>
               <p>
-                We would like to express our heartfelt gratitude to Prof. Sudarshan, Prof. Jyothi, Mr. Piyush, the Paradox Team (with special thanks to Vivek, Aparna, and Mayank from the technical team), 
+                We would like to express our heartfelt gratitude to Prof. Sudarshan, Prof. Jyothi, Mr. Piyush, the Paradox Team (with special thanks to Vivek, Aditya, Aparna, Mayank from the technicals, Tamajit and Shubham from multimedia), 
                 and Student Affairs for their unwavering support.
               </p>
               <center><img src="/ml/assets/images/logicloom/2.jpg" style="max-width:50%;height:auto;"/></center>
