--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ body {
     <div class="modal-content">
         <span class="close">&times;</span>
         <img src="https://wayanadiitm.github.io/contribute/assets/teaser.png" style="max-width:100%;height:auto;" alt="announcement"/>
-        <h3>Surprise awaits as Wayanad's most intelligent buddy, IRIS returns to take you to a wonderful algorithmic voyage this winter... Stay Tuned!!</h3>
+        <h5>Surprise awaits as Wayanad's most intelligent buddy, IRIS returns to take you to a wonderful algorithmic voyage this winter... Stay Tuned!!</h5>
     </div>
 </div>
 
@@ -290,8 +290,8 @@ body {
                 among students with more than 1000+ unique participants combined and Profs. from IITGN, IITR and IITM course instructors being a part of it.
               </p>
               <p>
-                We would like to express our heartfelt gratitude to Prof. Sudarshan, Prof. Jyothi, Mr. Piyush, the Paradox Team (with special thanks to Vivek, Aditya, Aparna, Mayank from the technicals, Tamajit and Shubham from multimedia), 
-                and Student Affairs for their unwavering support.
+                We would like to express our heartfelt gratitude to Prof. Sudarshan, Prof. Jyothi, Mr. Piyush, the Paradox Team (with special thanks to Vivek, Aditya, Aparna from technicals, Mayank from sponsorship Ayush from PR, Tamajit and Shubham from multimedia) 
+                and IITM Student Affairs for their unwavering support always.
               </p>
               <center><img src="/ml/assets/images/logicloom/2.jpg" style="max-width:50%;height:auto;"/></center>
               <br><br>
