--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@ body {
 <div id="myModal" class="modal">
     <div class="modal-content">
         <span class="close">&times;</span>
-        <img src="https://wayanadiitm.github.io/contribute/assets/teaser.png" style="max-width:100%;height:auto;" alt="announcement"/>
-        <h5>Surprise awaits as Wayanad's most intelligent buddy, IRIS returns to take you to a wonderful algorithmic voyage this winter... Stay Tuned!!</h5>
+        <a href=""><img src="https://wayanadiitm.github.io/contribute/assets/teaser.png" style="max-width:100%;height:auto;" alt="announcement"/></a>
     </div>
 </div>
 
