--- a/events/mlc/results.html
+++ b/events/mlc/results.html
@@ -146,6 +146,8 @@
               <tr>
                 <th>Team ID</th>
                 <th></th>
+                <th>Participants</th>
+                <th></th>
                 <th>macF1</th>
                 <th></th>
                 <th>Acc</th>
@@ -155,12 +157,16 @@
               <tr>
                 <td>T22104</td>
                 <td></td>
+                <td>name</td>
+                <td></td>
                 <td>0.963</td>
                 <td></td>
                 <td>0.986</td>
               </tr>
               <tr>
                 <td>T22082</td>
+                <td></td>
+                <td>name</td>
                 <td></td>
                 <td>0.956</td>
                 <td></td>
@@ -169,12 +175,16 @@
               <tr>
                 <td>T12173</td>
                 <td></td>
+                <td>name</td>
+                <td></td>
                 <td>0.951</td>
                 <td></td>
                 <td>0.983</td>
               </tr>
               <tr>
                 <td>T32019</td>
+                <td></td>
+                <td>name</td>
                 <td></td>
                 <td>0.922</td>
                 <td></td>
@@ -183,12 +193,16 @@
               <tr>
                 <td>T22121</td>
                 <td></td>
+                <td>name</td>
+                <td></td>
                 <td>0.892</td>
                 <td></td>
                 <td>0.954</td>
               </tr>
               <tr>
                 <td>T22094</td>
+                <td></td>
+                <td>name</td>
                 <td></td>
                 <td>0.863</td>
                 <td></td>
@@ -197,12 +211,16 @@
               <tr>
                 <td>T22128</td>
                 <td></td>
+                <td>name</td>
+                <td></td>
                 <td>0.861</td>
                 <td></td>
                 <td>0.938</td>
               </tr>
               <tr>
                 <td>T12002</td>
+                <td></td>
+                <td>name</td>
                 <td></td>
                 <td>0.833</td>
                 <td></td>
@@ -211,12 +229,16 @@
               <tr>
                 <td>T22074</td>
                 <td></td>
+                <td>name</td>
+                <td></td>
                 <td>0.79</td>
                 <td></td>
                 <td>0.888</td>
               </tr>
               <tr>
                 <td>T22103</td>
+                <td></td>
+                <td>name</td>
                 <td></td>
                 <td>0.783</td>
                 <td></td>
@@ -225,12 +247,16 @@
               <tr>
                 <td>T22029</td>
                 <td></td>
+                <td>name</td>
+                <td></td>
                 <td>0.713</td>
                 <td></td>
                 <td>0.82</td>
               </tr>
               <tr>
                 <td>T32007</td>
+                <td></td>
+                <td>name</td>
                 <td></td>
                 <td>0.697</td>
                 <td></td>
@@ -245,6 +271,8 @@
               <tr>
                 <th>Team ID</th>
                 <th></th>
+                <th>Participants</th>
+                <th></th>
                 <th>macF1</th>
                 <th></th>
                 <th>Acc</th>
@@ -254,12 +282,16 @@
               <tr>
                 <td>T11017</td>
                 <td></td>
+                <td>name</td>
+                <td></td>
                 <td>0.419</td>
                 <td></td>
                 <td>0.765</td>
               </tr>
               <tr>
                 <td>T21154</td>
+                <td></td>
+                <td>name</td>
                 <td></td>
                 <td>0.405</td>
                 <td></td>
@@ -268,12 +300,16 @@
               <tr>
                 <td>T21166</td>
                 <td></td>
+                <td>name</td>
+                <td></td>
                 <td>0.4</td>
                 <td></td>
                 <td>0.841</td>
               </tr>
               <tr>
                 <td>T11006</td>
+                <td></td>
+                <td>name</td>
                 <td></td>
                 <td>0.364</td>
                 <td></td>
@@ -282,12 +318,16 @@
               <tr>
                 <td>T21141</td>
                 <td></td>
+                <td>name</td>
+                <td></td>
                 <td>0.336</td>
                 <td></td>
                 <td>0.886</td>
               </tr>
               <tr>
                 <td>T21020</td>
+                <td></td>
+                <td>name</td>
                 <td></td>
                 <td>0.318</td>
                 <td></td>
