--- a/events/mlc/results.html
+++ b/events/mlc/results.html
@@ -157,7 +157,7 @@
               <tr>
                 <td>T22104</td>
                 <td></td>
-                <td>name</td>
+                <td>Sai Ruthvik, Shankha Subhra Saha</td>
                 <td></td>
                 <td>0.963</td>
                 <td></td>
@@ -166,7 +166,7 @@
               <tr>
                 <td>T22082</td>
                 <td></td>
-                <td>name</td>
+                <td>Parashmani Datta, Athish Sivakumaran</td>
                 <td></td>
                 <td>0.956</td>
                 <td></td>
@@ -175,7 +175,7 @@
               <tr>
                 <td>T12173</td>
                 <td></td>
-                <td>name</td>
+                <td>Darshan Kumar</td>
                 <td></td>
                 <td>0.951</td>
                 <td></td>
@@ -184,7 +184,7 @@
               <tr>
                 <td>T32019</td>
                 <td></td>
-                <td>name</td>
+                <td>Saminathan C, Vanchit Visanth M S, Sahishnuram S</td>
                 <td></td>
                 <td>0.922</td>
                 <td></td>
@@ -193,7 +193,7 @@
               <tr>
                 <td>T22121</td>
                 <td></td>
-                <td>name</td>
+                <td>Siddharth Roy, Sarfraz Ahmed</td>
                 <td></td>
                 <td>0.892</td>
                 <td></td>
@@ -202,7 +202,7 @@
               <tr>
                 <td>T22094</td>
                 <td></td>
-                <td>name</td>
+                <td>Gaurav Singh, Sakshi</td>
                 <td></td>
                 <td>0.863</td>
                 <td></td>
@@ -211,7 +211,7 @@
               <tr>
                 <td>T22128</td>
                 <td></td>
-                <td>name</td>
+                <td>Ayaan Qureshi, Nikhil Maurya</td>
                 <td></td>
                 <td>0.861</td>
                 <td></td>
@@ -220,7 +220,7 @@
               <tr>
                 <td>T12002</td>
                 <td></td>
-                <td>name</td>
+                <td>Shiva Kumar</td>
                 <td></td>
                 <td>0.833</td>
                 <td></td>
@@ -229,7 +229,7 @@
               <tr>
                 <td>T22074</td>
                 <td></td>
-                <td>name</td>
+                <td>Rohit Satheesh, Mohit Kumar</td>
                 <td></td>
                 <td>0.79</td>
                 <td></td>
@@ -238,7 +238,7 @@
               <tr>
                 <td>T22103</td>
                 <td></td>
-                <td>name</td>
+                <td>Saravanan K, Stuti Bahuguna</td>
                 <td></td>
                 <td>0.783</td>
                 <td></td>
@@ -247,7 +247,7 @@
               <tr>
                 <td>T22029</td>
                 <td></td>
-                <td>name</td>
+                <td>Arka Dash, Nimish Shinde</td>
                 <td></td>
                 <td>0.713</td>
                 <td></td>
@@ -256,7 +256,7 @@
               <tr>
                 <td>T32007</td>
                 <td></td>
-                <td>name</td>
+                <td>Manaswita Mandal, Debapriyo Saha</td>
                 <td></td>
                 <td>0.697</td>
                 <td></td>
@@ -282,7 +282,7 @@
               <tr>
                 <td>T11017</td>
                 <td></td>
-                <td>name</td>
+                <td>Kartik Agrawal</td>
                 <td></td>
                 <td>0.419</td>
                 <td></td>
@@ -291,7 +291,7 @@
               <tr>
                 <td>T21154</td>
                 <td></td>
-                <td>name</td>
+                <td>Keshari Nath Chaudhary, Pratiksha Naik</td>
                 <td></td>
                 <td>0.405</td>
                 <td></td>
@@ -300,7 +300,7 @@
               <tr>
                 <td>T21166</td>
                 <td></td>
-                <td>name</td>
+                <td>Shaikh Gufran Jabbar, Sukanya S</td>
                 <td></td>
                 <td>0.4</td>
                 <td></td>
@@ -309,7 +309,7 @@
               <tr>
                 <td>T11006</td>
                 <td></td>
-                <td>name</td>
+                <td>Nitish Rishi</td>
                 <td></td>
                 <td>0.364</td>
                 <td></td>
@@ -318,7 +318,7 @@
               <tr>
                 <td>T21141</td>
                 <td></td>
-                <td>name</td>
+                <td>Aniket Dash, Deva Vasista</td>
                 <td></td>
                 <td>0.336</td>
                 <td></td>
@@ -327,7 +327,7 @@
               <tr>
                 <td>T21020</td>
                 <td></td>
-                <td>name</td>
+                <td>Sanyam Mittal, Nithish Kumar</td>
                 <td></td>
                 <td>0.318</td>
                 <td></td>
