--- a/gallery.html
+++ b/gallery.html
@@ -336,7 +336,7 @@
             </div>
             <div class="col-xl-7 col-lg-6 col-md-6 col-sm-12">
               <div class="ud-widget">
-                <h5 class="ud-widget-title">TnCs</h5>
+                <h5 class="ud-widget-title"><a href="https://www.freecounterstat.com" title="web counter" target="_blank"><img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=bjuelw2smbbxmnf5lj766eq2bsthqy5c" border="0" title="web counter" alt="web counter"></a></h5>
                 <p><small>Disclaimer - This portal is hosted solely for the convenience of the student community, and the institute or IITM BS program does not endorse or assume responsibility for the content, products, or services provided here. Neither the institute nor the initiative members or house council or developer will be responsible for any issues arising if any from using this site. Accessing this site, you by-default agree to all TnCs.</small></p>
                 <ul class="ud-widget-links">
                  
