--- a/events/epochs/index.html
+++ b/events/epochs/index.html
@@ -190,7 +190,7 @@ section.contact .social-media a {
           <a class="nav-link" href="#about">Rules</a>
         </li>
       </ul>
-      <a href="https://wayanadonline.unaux.com/submit.php" target="_blank" class="btn btn-outline-dark d-none d-lg-block" href="">Upload</a>
+      <a href="https://wayanadonline.unaux.com/submit.php" target="_blank" class="btn btn-outline-dark d-none d-lg-block" href="">Upload <i class="bi bi-link-45deg"></i></a>
     </div>
   </div>
 </nav>
@@ -200,9 +200,9 @@ section.contact .social-media a {
     <div class="row align-items-center">
       <div class="col-sm-6">
         <h1 class="display-2 fw-bold">Newsletter Contest</h1>
-        <p>We invite students to contribute articles in the AI-ML and programming domains (including interdisciplinary topics such as AI in Healthcare, Physics and more) for our blog page. We are looking for fresh insights, any findings, and thoughtful analyses that engage our community.
+        <p>We invite students to contribute <b>articles in the AI-ML and programming domains (including interdisciplinary topics such as AI in Physics, Robotics and more) for our newsletter</b>. We are looking for fresh insights, any findings, and thoughtful analyses that engage our community.
         </p>
-         <a href="https://wayanadonline.unaux.com/submit.php" target="_blank"><button class="btn btn-outline-dark btn-lg">Make Submission</button></a>
+         <a href="https://wayanadonline.unaux.com/submit.php" target="_blank"><button class="btn btn-outline-dark btn-lg">Make Submission <i class="bi bi-rocket-takeoff-fill"></i></button></a>
       </div>
       <div class="col-sm-6 text-center">
         <img src="ml1.png" class="img-fluid">
@@ -213,35 +213,32 @@ section.contact .social-media a {
 
 <section class="services" id="services">
   <div class="container">
-    <h2 class="display-5 fw-bold mb-4">Services</h2>
+    <h2 class="display-5 fw-bold mb-4">Topics</h2>
     <div class="row">
       <div class="col-lg col-sm-6 mt-4">
         <div class="card">
-          <i class="bi bi-cup-hot-fill"></i>
+          <i class="bi bi-alexa"></i>
           <div class="card-body">
-            <h5 class="card-title fw-bold">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-              of the card's content.</p>
+            <h5 class="card-title fw-bold">AI</h5>
+            <p class="card-text">AI, ML, NLP, DL, CV, GenAI, Cyber security</p>
           </div>
         </div>
       </div>
       <div class="col-lg col-sm-6 mt-4">
         <div class="card">
-          <i class="bi bi-cup-hot-fill"></i>
+          <i class="bi bi-code-square"></i>
           <div class="card-body">
-            <h5 class="card-title fw-bold">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-              of the card's content.</p>
+            <h5 class="card-title fw-bold">Programming</h5>
+            <p class="card-text">Programming Languages, Data Analysis, etc.</p>
           </div>
         </div>
       </div>
       <div class="col-lg col-sm-6 m-auto mt-4">
         <div class="card">
-          <i class="bi bi-cup-hot-fill"></i>
+          <i class="bi bi-robot"></i>
           <div class="card-body">
-            <h5 class="card-title fw-bold">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-              of the card's content.</p>
+            <h5 class="card-title fw-bold">Interdisciplinary</h5>
+            <p class="card-text">Applications of AI in Physics, Robotics, Biology, Healthcare etc.</p>
           </div>
         </div>
       </div>
@@ -252,17 +249,31 @@ section.contact .social-media a {
 <section class="about" id="about">
   <div class="container">
     <h2 class="display-5 fw-bold mb-4">Instructions</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum est id pulvinar mollis. Nullam
-      rhoncus dignissim ipsum, ac pulvinar tellus sodales ut. Vestibulum tincidunt malesuada consectetur.
-      Nulla vel fermentum leo. Mauris rhoncus blandit justo, at congue dui rhoncus sit amet.</p>
-    <p>Proin molestie
-      sapien vel nulla accumsan, sit amet viverra metus ornare. Mauris iaculis ex vitae mollis pulvinar.
-      Phasellus fringilla neque sed ligula lacinia iaculis.</p>
+     <p><b><font color="green">Participants from our previous ML Challenge editions with decent, effective model scores can consider writing articles on their methodology, 
+                  findings (regarding techniques used, what improved the performance, model architecture etc.) itself. This would be
+                interesting! We encourage you all to do this. If you had participated as a team back then, you can collaborate to write, as well.</font></b>
+              </p>
+
+              <p>
+                Submission Guidelines:
+<li>Goes without saying, content must be original i.e. written by you and free from any copyright claims by third parties. No plagiarism pls, urgh!</li>
+<li>Articles should not have been posted elsewhere.</li>
+<li>Please ensure that the work is free from AI-generated content (like GPT etc).</li>
+<li>Regrettably, English will be the only language accepted this time.</li>
+<li>You can make one submission only. You can revise and submit it anytime before deadline.</li>
+<li>It should be crisp, try to align with this page limit - max. number of pages can be 3. Cite references wherever applicable.</li>
+<li>Acceptance to showcase a blog on our site depends on the initiative core team and whatever decided is final. No queries to be entertained about this.</li>
+<li>If the submitted article is accepted from our end, the same cannot be posted/shared in other platforms.</li>
+<br>
+                <b><font color="blue">Accepted articles will be featured in our newsletter, making it a special highlight! We look forward to the exceptional quality of your submissions.</font></b><br><br>
+                <font color="red">Deadline: 25th November 2024 IST - <a href="/ml/events/epochs/steps-article-contest.pdf" target="_blank"><u>Click here</u> to view the steps for submission</a>.</font>
+              </p>
+              <p><b>We express our sincere gratitude to Mr. Piyush Wairale, course instructor IITM BS for his support and guidance.</b></p>
   </div>
 </section>
 
 
-<section class="testimonials" id="testimonials">
+<!--<section class="testimonials" id="testimonials">
   <div class="container">
     <h2 class="display-5 fw-bold mb-4">Testimonials</h2>
     <div id="carouselExample" class="carousel slide carousel-dark carousel-fade">
@@ -291,7 +302,7 @@ section.contact .social-media a {
       </button>
     </div>
   </div>
-</section>
+</section>-->
 
 
 <footer class="text-center p-3 bg-body-tertiary">
