--- a/events/epochs/index.html
+++ b/events/epochs/index.html
@@ -199,8 +199,8 @@ section.contact .social-media a {
   <div class="container-lg">
     <div class="row align-items-center">
       <div class="col-sm-6">
-        <h1 class="display-2 fw-bold">Newsletter Contest</h1>
-        <p>We invite students to contribute <b>articles in the AI-ML and programming domains (including interdisciplinary topics such as AI in Physics, Robotics and more) for our newsletter</b>. We are looking for fresh insights, any findings, and thoughtful analyses that engage our community.
+        <h1 class="display-2 fw-bold">Article Contest</h1>
+        <p>We invite students to contribute articles in the <b>AI-ML and programming domains (including interdisciplinary topics such as AI in Physics, Robotics and more) for our annual newsletter</b>. We are looking for fresh insights, any findings, and thoughtful analyses that engage our community.
         </p>
          <a href="https://wayanadonline.unaux.com/submit.php" target="_blank"><button class="btn btn-outline-dark btn-lg">Make Submission <i class="bi bi-rocket-takeoff-fill"></i></button></a>
       </div>
