--- a/events/epochs/index.html
+++ b/events/epochs/index.html
@@ -306,7 +306,7 @@ section.contact .social-media a {
 
 
 <footer class="text-center p-3 bg-body-tertiary">
-  <div>&copy; 2024. All Rights Reserved.</div>
+  <div>Any Questions? Write to <a href="mailto:wayanad-ml@ds.study.iitm.ac.in" target="_blank">wayanad-ml@ds.study.iitm.ac.in</a></div>
 </footer>  
 </body>
 </html>
