--- a/events/epochs/index.html
+++ b/events/epochs/index.html
@@ -249,12 +249,12 @@ section.contact .social-media a {
 <section class="about" id="about">
   <div class="container">
     <h2 class="display-5 fw-bold mb-4">Instructions</h2>
-     <p><b><font color="green">Participants from our previous ML Challenge editions with decent, effective model scores can consider writing articles on their methodology, 
+     <p style="text-align: justify;"><b><font color="green">Participants from our previous ML Challenge editions with decent, effective model scores can consider writing articles on their methodology, 
                   findings (regarding techniques used, what improved the performance, model architecture etc.) itself. This would be
                 interesting! We encourage you all to do this. If you had participated as a team back then, you can collaborate to write, as well.</font></b>
               </p>
 
-              <p>
+              <p style="text-align: justify;">
                 Submission Guidelines:
 <li>Goes without saying, content must be original i.e. written by you and free from any copyright claims by third parties. No plagiarism pls, urgh!</li>
 <li>Articles should not have been posted elsewhere.</li>
@@ -263,10 +263,10 @@ section.contact .social-media a {
 <li>You can make one submission only. You can revise and submit it anytime before deadline.</li>
 <li>It should be crisp, try to align with this page limit - max. number of pages can be 3. Cite references wherever applicable.</li>
 <li>Acceptance to showcase a blog on our site depends on the initiative core team and whatever decided is final. No queries to be entertained about this.</li>
-<li>If the submitted article is accepted from our end, the same cannot be posted/shared in other platforms.</li>
+<li>If the submitted article is approved from our end, the same cannot be posted/shared in other platforms.</li>
 <br>
-                <b><font color="blue">Accepted articles will be featured in our newsletter, making it a special highlight! We look forward to the exceptional quality of your submissions.</font></b><br><br>
-                <font color="red">Deadline: 25th November 2024 IST - <a href="/ml/events/epochs/steps-article-contest.pdf" target="_blank"><u>Click here</u> to view the steps for submission</a>.</font>
+                <b><font color="blue">Shortlisted articles will be featured in our newsletter, making it a special highlight! We look forward to the exceptional quality of your submissions.</font><br><br>
+                <font color="red">Deadline: 25th November 2024</b> - <a href="/ml/events/epochs/steps-article-contest.pdf" target="_blank"><u>Click here</u> to view the steps for submission</a>.</font>
               </p>
               <p><b>We express our sincere gratitude to Mr. Piyush Wairale, course instructor IITM BS for his support and guidance.</b></p>
   </div>
