--- a/events/epochs/index.html
+++ b/events/epochs/index.html
@@ -174,7 +174,7 @@ section.contact .social-media a {
 <body>
 <nav class="navbar navbar-expand-lg fixed-top shadow-sm">
   <div class="container-lg">
-    <a class="navbar-brand fw-bold" href="">EPOCHS</a>
+    <a class="navbar-brand fw-bold" href=""><img src="https://cdn-icons-png.flaticon.com/128/10817/10817404.png" height="50" width="50"/></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -188,6 +188,9 @@ section.contact .social-media a {
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#about">Rules</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="steps-article-contest.pdf">Guide</a>
         </li>
       </ul>
       <a href="https://wayanadonline.unaux.com/submit.php" target="_blank" class="btn btn-outline-dark d-none d-lg-block" href="">Upload <i class="bi bi-link-45deg"></i></a>
@@ -255,20 +258,19 @@ section.contact .social-media a {
               </p>
 
               <p style="text-align: justify;">
-                Submission Guidelines:
-<li>Goes without saying, content must be original i.e. written by you and free from any copyright claims by third parties. No plagiarism pls, urgh!</li>
-<li>Articles should not have been posted elsewhere.</li>
-<li>Please ensure that the work is free from AI-generated content (like GPT etc).</li>
-<li>Regrettably, English will be the only language accepted this time.</li>
-<li>You can make one submission only. You can revise and submit it anytime before deadline.</li>
-<li>It should be crisp, try to align with this page limit - max. number of pages can be 3. Cite references wherever applicable.</li>
-<li>Acceptance to showcase a blog on our site depends on the initiative core team and whatever decided is final. No queries to be entertained about this.</li>
-<li>If the submitted article is approved from our end, the same cannot be posted/shared in other platforms.</li>
+                Submission Guidelines:<br>
+1. Goes without saying, content must be original i.e. written by you and free from any copyright claims by third parties. No plagiarism pls, urgh!<br>
+2. Articles should not have been posted elsewhere.<br>
+3. Please ensure that the work is free from AI-generated content (like GPT etc).<br>
+4. Regrettably, English will be the only language accepted this time.<br>
+5. You can make one submission only. You can revise and submit it anytime before deadline.<br>
+6. It should be crisp, try to align with this page limit - max. number of pages can be 3. Cite references wherever applicable.</br>
+7. Acceptance to showcase a blog on our site depends on the initiative core team and whatever decided is final. No queries to be entertained about this.<br>
+8. If the submitted article is approved from our end, the same cannot be posted/shared in other platforms.
 <br>
-                <b><font color="blue">Shortlisted articles will be featured in our newsletter, making it a special highlight! We look forward to the exceptional quality of your submissions.</font><br><br>
-                <font color="red">Deadline: 25th November 2024</b> - <a href="/ml/events/epochs/steps-article-contest.pdf" target="_blank"><u>Click here</u> to view the steps for submission</a>.</font>
+                <b><font color="blue">Shortlisted articles will be featured in our newsletter, making it a special highlight! We look forward to the exceptional quality of your submissions.</font>
               </p>
-              <p><b>We express our sincere gratitude to Mr. Piyush Wairale, course instructor IITM BS for his support and guidance.</b></p>
+              <p style="text-align: justify;"><b>We express our sincere gratitude to Mr. Piyush Wairale, course instructor IITM BS for his support and guidance.</b></p>
   </div>
 </section>
 
