--- a/events/epochs/index.html
+++ b/events/epochs/index.html
@@ -223,7 +223,7 @@ section.contact .social-media a {
           <i class="bi bi-alexa"></i>
           <div class="card-body">
             <h5 class="card-title fw-bold">AI</h5>
-            <p class="card-text">AI, ML, NLP, DL, CV, GenAI, Cyber security</p>
+            <p class="card-text">AI, ML, NLP, DL, CV, GenAI, Cyber security, Data Science, Statistics</p>
           </div>
         </div>
       </div>
@@ -241,7 +241,7 @@ section.contact .social-media a {
           <i class="bi bi-robot"></i>
           <div class="card-body">
             <h5 class="card-title fw-bold">Interdisciplinary</h5>
-            <p class="card-text">Applications of AI in Physics, Robotics, Biology, Healthcare etc.</p>
+            <p class="card-text">Applications of AI in Physics, Quantum Computing, Robotics, Biology, Business, Healthcare etc.</p>
           </div>
         </div>
       </div>
@@ -258,7 +258,7 @@ section.contact .social-media a {
               </p>
 
               <p style="text-align: justify;">
-                Submission Guidelines:<br>
+                <b>Submission Guidelines</b><br>
 1. Goes without saying, content must be original i.e. written by you and free from any copyright claims by third parties. No plagiarism pls, urgh!<br>
 2. Articles should not have been posted elsewhere.<br>
 3. Please ensure that the work is free from AI-generated content (like GPT etc).<br>
@@ -268,7 +268,7 @@ section.contact .social-media a {
 7. Acceptance to showcase a blog on our site depends on the initiative core team and whatever decided is final. No queries to be entertained about this.<br>
 8. If the submitted article is approved from our end, the same cannot be posted/shared in other platforms.
 <br>
-                <b><font color="blue">Shortlisted articles will be featured in our newsletter, making it a special highlight! We look forward to the exceptional quality of your submissions.</font>
+                <font color="blue">Shortlisted articles will be featured in our newsletter, making it a special highlight! We look forward to the exceptional quality of your submissions.</font>
               </p>
               <p style="text-align: justify;"><b>We express our sincere gratitude to Mr. Piyush Wairale, course instructor IITM BS for his support and guidance.</b></p>
   </div>
